@@ -38,7 +38,6 @@ COLOURS_NTSC_setup_t COLOURS_NTSC_specific_setup;
 
 /* Default setup - used by COLOURS_NTSC_RestoreDefaults(). */
 static const COLOURS_NTSC_setup_t default_setup = {
-	0.0, /* hue */
 	21.0, /* color delay, chosen to match color names given in GTIA.PDF */
 };
 
@@ -198,7 +197,7 @@ static void YIQ2RGB(int colourtable[256], const double yiq_table[768])
 void COLOURS_NTSC_Update(int colourtable[256])
 {
 	double yiq_table[768];
-	UpdateYIQTable(yiq_table, - colorburst_angle + COLOURS_NTSC_specific_setup.hue * M_PI, COLOURS_NTSC_setup.saturation);
+	UpdateYIQTable(yiq_table, - colorburst_angle + COLOURS_NTSC_setup.hue * M_PI, COLOURS_NTSC_setup.saturation);
 	YIQ2RGB(colourtable, yiq_table);
 }
 
@@ -215,8 +214,7 @@ void COLOURS_NTSC_SetPreset(Colours_preset_t preset)
 
 Colours_preset_t COLOURS_NTSC_GetPreset()
 {
-	if (Util_almostequal(COLOURS_NTSC_specific_setup.hue, default_setup.hue, 0.001) &&
-	    Util_almostequal(COLOURS_NTSC_specific_setup.color_delay, default_setup.color_delay, 0.001))
+	if (Util_almostequal(COLOURS_NTSC_specific_setup.color_delay, default_setup.color_delay, 0.001))
 		return COLOURS_PRESET_STANDARD;
 	return COLOURS_PRESET_CUSTOM;
 }
@@ -237,7 +235,7 @@ int COLOURS_NTSC_ReadConfig(char *option, char *ptr)
 	else if (strcmp(option, "COLOURS_NTSC_GAMMA") == 0)
 		return Util_sscandouble(ptr, &COLOURS_NTSC_setup.gamma);
 	else if (strcmp(option, "COLOURS_NTSC_HUE") == 0)
-		return Util_sscandouble(ptr, &COLOURS_NTSC_specific_setup.hue);
+		return Util_sscandouble(ptr, &COLOURS_NTSC_setup.hue);
 	else if (strcmp(option, "COLOURS_NTSC_DELAY") == 0)
 		return Util_sscandouble(ptr, &COLOURS_NTSC_specific_setup.color_delay);
 	else if (strcmp(option, "COLOURS_NTSC_EXTERNAL_PALETTE") == 0)
@@ -258,7 +256,7 @@ void COLOURS_NTSC_WriteConfig(FILE *fp)
 	fprintf(fp, "COLOURS_NTSC_CONTRAST=%g\n", COLOURS_NTSC_setup.contrast);
 	fprintf(fp, "COLOURS_NTSC_BRIGHTNESS=%g\n", COLOURS_NTSC_setup.brightness);
 	fprintf(fp, "COLOURS_NTSC_GAMMA=%g\n", COLOURS_NTSC_setup.gamma);
-	fprintf(fp, "COLOURS_NTSC_HUE=%g\n", COLOURS_NTSC_specific_setup.hue);
+	fprintf(fp, "COLOURS_NTSC_HUE=%g\n", COLOURS_NTSC_setup.hue);
 	fprintf(fp, "COLOURS_NTSC_DELAY=%g\n", COLOURS_NTSC_specific_setup.color_delay);
 	fprintf(fp, "COLOURS_NTSC_EXTERNAL_PALETTE=%s\n", COLOURS_NTSC_external.filename);
 	fprintf(fp, "COLOURS_NTSC_EXTERNAL_PALETTE_LOADED=%d\n", COLOURS_NTSC_external.loaded);
@@ -294,9 +292,9 @@ int COLOURS_NTSC_Initialise(int *argc, char *argv[])
 				COLOURS_NTSC_setup.gamma = atof(argv[++i]);
 			else a_m = TRUE;
 		}
-		else if (strcmp(argv[i], "-hue") == 0) {
+		else if (strcmp(argv[i], "-ntsc-tint") == 0) {
 			if (i_a)
-				COLOURS_NTSC_specific_setup.hue = atof(argv[++i]);
+				COLOURS_NTSC_setup.hue = atof(argv[++i]);
 			else a_m = TRUE;
 		}
 		else if (strcmp(argv[i], "-colordelay") == 0) {
@@ -319,7 +317,7 @@ int COLOURS_NTSC_Initialise(int *argc, char *argv[])
 				Log_print("\t-ntsc-contrast <num>    Set NTSC contrast");
 				Log_print("\t-ntsc-brightness <num>  Set NTSC brightness");
 				Log_print("\t-ntsc-gamma <num>       Set NTSC color gamma factor");
-				Log_print("\t-hue <num>              Set NTSC hue of colors");
+				Log_print("\t-ntsc-tint <num>        Set NTSC tint");
 				Log_print("\t-colordelay <num>       Set NTSC GTIA color delay");
 				Log_print("\t-paletten <filename>    Load NTSC external palette");
 				Log_print("\t-paletten-adjust        Apply adjustments to NTSC external palette");
