@@ -43,14 +43,21 @@ static void AdjustExternal(int colourtable[256])
 	unsigned char *ext_ptr = COLOURS_PAL_external.palette;
 	int n;
 
+	double const hue = COLOURS_PAL_setup.hue * M_PI;
+	double const s = sin(hue);
+	double const c = cos(hue);
+
 	for (n = 0; n < 256; n ++) {
-		/* Convert RGB values from external palette to YIQ. */
+		/* Convert RGB values from external palette to YUV. */
 		double r = (double)*ext_ptr++ / 255.0;
 		double g = (double)*ext_ptr++ / 255.0;
 		double b = (double)*ext_ptr++ / 255.0;
 		double y = 0.299 * r + 0.587 * g + 0.114 * b;
 		double u = -0.14713 * r - 0.28886 * g + 0.436 * b;
 		double v = 0.615 * r - 0.51499 * g - 0.10001 * b;
+		double tmp_u = u;
+		u = tmp_u * c - v * s;
+		v = tmp_u * s + v * c;
 		y = pow(y, gamma);
 		y *= COLOURS_PAL_setup.contrast * 0.5 + 1;
 		y += COLOURS_PAL_setup.brightness * 0.5;
@@ -81,10 +88,10 @@ static void GeneratePalette(int colourtable[256])
 
 	/* NTSC luma multipliers from CGIA.PDF */
 	double luma_mult[16] = {
-		0.6941, 0.7091, 0.7241, 0.7401, 
+		0.6941, 0.7091, 0.7241, 0.7401,
 		0.7560, 0.7741, 0.7931, 0.8121,
-	       	0.8260, 0.8470, 0.8700, 0.8930,
-	       	0.9160, 0.9420, 0.9690, 1.0000};
+		0.8260, 0.8470, 0.8700, 0.8930,
+		0.9160, 0.9420, 0.9690, 1.0000};
 
 	/* TODO Angles were chosen based on examination of several
 	   PAL screenshots. A thorough examination of PAL GTIA color
@@ -96,13 +103,14 @@ static void GeneratePalette(int colourtable[256])
 		-0.815415, -1.198193, 4.568137, 4.014433,
 		3.568811, 3.134938, 2.71825, 2.279574
 	};
+	double const hue = COLOURS_PAL_setup.hue * M_PI;
 	for (cr = 0; cr < 16; cr ++) {
-		double angle = color_angles[cr];
+		double angle = color_angles[cr] + hue;
 		double saturation = (cr ? (COLOURS_PAL_setup.saturation + 1) * 0.175f: 0.0f);
 		double u = cos(angle) * saturation;
 		double v = sin(angle) * saturation;
 		for (lm = 0; lm < 16; lm ++) {
-			/* calculate yiq for color entry */
+			/* calculate yuv for color entry */
 			double y = (luma_mult[lm] - luma_mult[0]) / (luma_mult[15] - luma_mult[0]);
 			double r, g, b;
 			y = pow(y, gamma);
@@ -143,6 +151,8 @@ int COLOURS_PAL_ReadConfig(char *option, char *ptr)
 		return Util_sscandouble(ptr, &COLOURS_PAL_setup.brightness);
 	else if (strcmp(option, "COLOURS_PAL_GAMMA") == 0)
 		return Util_sscandouble(ptr, &COLOURS_PAL_setup.gamma);
+	else if (strcmp(option, "COLOURS_PAL_HUE") == 0)
+		return Util_sscandouble(ptr, &COLOURS_PAL_setup.hue);
 	else if (strcmp(option, "COLOURS_PAL_EXTERNAL_PALETTE") == 0)
 		Util_strlcpy(COLOURS_PAL_external.filename, ptr, sizeof(COLOURS_PAL_external.filename));
 	else if (strcmp(option, "COLOURS_PAL_EXTERNAL_PALETTE_LOADED") == 0)
@@ -161,6 +171,7 @@ void COLOURS_PAL_WriteConfig(FILE *fp)
 	fprintf(fp, "COLOURS_PAL_CONTRAST=%g\n", COLOURS_PAL_setup.contrast);
 	fprintf(fp, "COLOURS_PAL_BRIGHTNESS=%g\n", COLOURS_PAL_setup.brightness);
 	fprintf(fp, "COLOURS_PAL_GAMMA=%g\n", COLOURS_PAL_setup.gamma);
+	fprintf(fp, "COLOURS_PAL_HUE=%g\n", COLOURS_PAL_setup.hue);
 	fprintf(fp, "COLOURS_PAL_EXTERNAL_PALETTE=%s\n", COLOURS_PAL_external.filename);
 	fprintf(fp, "COLOURS_PAL_EXTERNAL_PALETTE_LOADED=%d\n", COLOURS_PAL_external.loaded);
 	fprintf(fp, "COLOURS_PAL_ADJUST_EXTERNAL_PALETTE=%d\n", COLOURS_PAL_external.adjust);
@@ -195,6 +206,11 @@ int COLOURS_PAL_Initialise(int *argc, char *argv[])
 				COLOURS_PAL_setup.gamma = atof(argv[++i]);
 			else a_m = TRUE;
 		}
+		else if (strcmp(argv[i], "-pal-tint") == 0) {
+			if (i_a)
+				COLOURS_PAL_setup.hue = atof(argv[++i]);
+			else a_m = TRUE;
+		}
 		else if (strcmp(argv[i], "-palettep") == 0) {
 			if (i_a) {
 				Util_strlcpy(COLOURS_PAL_external.filename, argv[++i], sizeof(COLOURS_PAL_external.filename));
@@ -210,6 +226,7 @@ int COLOURS_PAL_Initialise(int *argc, char *argv[])
 				Log_print("\t-pal-contrast <num>    Set PAL contrast");
 				Log_print("\t-pal-brightness <num>  Set PAL brightness");
 				Log_print("\t-pal-gamma <num>       Set PAL color gamma factor");
+				Log_print("\t-pal-tint <num>        Set PAL tint");
 				Log_print("\t-palettep <filename>   Load PAL external palette");
 				Log_print("\t-palettep-adjust       Apply adjustments to PAL external palette");
 			}
